# ai-agents-workshop

Final/: README.md
Topic3Tools/: .gitignore  README.md  constants.py  gpt4omini_test.py  langgraph-tool-handling-new.py  llama_mmlu_eval.py  load_local_model.py  manual_tool_handling_new.py  pyproject.toml  requirements.txt  test-calculator.py
Topic4Exploring/: README.md  main.py  main_project_output.txt  pyproject.toml  react_agent_example_output.txt  toolnode_example_output.txt  topic4_assignment_dump.txt  wiki_ddg_output.txt
Topic5rag/: .gitignore  README.md  download_corpora.sh  manual_rag_pipeline_universal.ipynb
Topic6VLM/: .gitignore  README.md  gradio_quickstart.py  llava_video_surveillance.py  main.py  pyproject.toml
Topic6VLM/agent/: __init__.py  graph.py  nodes.py  ollama_client.py  state.py  ui.py
Topic6VLM/analysis/video_eval/: report.md
Topic6VLM/test/: test_graph_one_turn.py  test_video_surveillance.py
Topic6VLM/util/: __init__.py  imgUtils.py
basic-langgraph-agents/: .gitignore  README.md  langgraph_simple_llama_agent.py  pyproject.toml  requirements.txt
running-an-llm/: .gitignore  README.md  llama_mmlu_eval.py  requirements.txt  simple_chat_agent.py
