[project]
name = "topic6vlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "gradio>=6.8.0",
    "huggingface-hub>=1.5.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pyproject-toml>=0.1.0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "langchain-mcp-adapters>=0.2.1",
    "ruff>=0.15.4",
]
