[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "grandalf>=0.8",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
